<resources>
    <string name="app_name">MOSIS_Projekat</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="title_activity_login">LoginActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


    <string name="hint_kI">Korisnicko Ime</string>
    <string name="hint_pW">Sifra</string>
    <string name="hint_FName">Ime</string>
    <string name="hint_LName">Prezime</string>
    <string name="btnReg">Registruj Se</string>
    <string name="tVlogin">Prijavi se</string>
    <string name="btnAddPicture">Dodaj Sliku</string>
    <string name="btnLogin">Prijavi se</string>
    <string name="tVReg">Registruj se</string>
    <string name="tVSignOut">Odjavi se</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">MOSIS Projekat</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="action_add_friend_server">Dodaj Prijatelja (Server)</string>
    <string name="action_add_friend_client">Dodaj Prijatelja (Client)</string>
    <string name="menu_home">Home</string>
    <string name="menu_friends">Prijatelji</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="hint_PhoneNum">Broj Telefona</string>
    <string name="hint_WorkShopName">Ime Radionice</string>
    <string name="tip_radionice">Tip Radionice:</string>
    <string name="cena_rada">Cena Rada:</string>
    <string name="iskoristi_kameru">Koristi Kameru</string>
    <string name="hint_Opis">Opis</string>
    <string name="dodaj_radionicu">Dodaj Radionicu</string>
    <string name="hint_WorkShopType">Tip Radionice</string>
    <string name="hint_WorkshopDistance">Rastojanje do Radionice (u metrima)</string>
    <string name="ocena">Ocena:</string>
    <string name="search">Pretrazi</string>
    <string name="menu_maps">Mapa</string>
    <string name="menu_search">Pretraga</string>
    <string name="confirm">Potvrdi</string>
    <string name="cancel">Otkazi</string>
    <string name="location_rising">Daljini Rastuce</string>
    <string name="location_falling">Daljini Opadajuce</string>
    <string name="workprice_rising">Ceni Rada Rastuce</string>
    <string name="workprice_falling">Ceni Rada Opadajuce</string>
    <string name="rating_rising">Oceni Rastuce</string>
    <string name="rating_falling">Oceni Opadajuce</string>
    <string name="Favorite">Zapamti</string>
    <string name="navigate">Lokacija</string>

    <string name="phoneNumberInfo">Broj telefona: %1$s</string>
    <string name="your_review">Tvoja Ocena:</string>
    <string name="share_your_opinion">Podeli Svoje Misljenje</string>
    <string name="addReview">Dodaj Ocenu</string>
    <string name="shareThoughts">Podeli misljenje:</string>
    <string name="saved">Omiljeni</string>
    <string name="rankInfo">Poeni: %1$d, Rank: %2$s</string>
    <string name="rankInfoNewLine">Poeni: %1$d \nRank: %2$s</string>
    <string name="ranks">Poeni</string>
    <string name="action_show_users">Prikazi korisnike</string>
    <string name="action_show_workshops">Filtriraj radionice</string>


    <string-array name="workshops_array">
        <item>Mehanicar</item>
        <item>Farbar</item>
        <item>Limar</item>
        <item>Vulkanizer</item>
        <item>Pranje i Ciscenje</item>
    </string-array>
    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="share_location">Deli lokaciju</string>
    <string name="get_notifications">Notifikacije</string>
    <string name="settings">Podesavanja</string>
    <string name="no_reviews">Nema ocena</string>
    <string name="no_friends">Nemas prijatelje</string>
    <string name="info">Informacije</string>
    <string name="close">Zatvori</string>
    <string name="bluetoothUsers">Bluetooth uredjaji</string>
    <string name="maps">Mapa</string>
    <string name="friend">Prijatelj</string>
    <string name="addWorkshop">Dodaj Radionicu</string>
    <string name="list">Lista Radionica</string>
    <string name="savedWorkshops">Omiljene radionice</string>
    <string name="ranksList">Rang lista</string>


</resources>