<?xml version="1.0" encoding="utf-8"?>

<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".Main.ui.maps.workshops.AddWorkshopFragment">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/WorkshopPhoneNum"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="32dp"
            android:hint="@string/hint_PhoneNum"
            app:errorIconDrawable="@drawable/ic_error"
            app:helperTextTextAppearance="@style/TextAppearance.MaterialComponents.Subtitle1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/WorkshopName">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etWorkshopPhoneNum"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="phone"
                android:textColorHint="#757575" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/WorkshopName"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="32dp"
            android:hint="@string/hint_WorkShopName"
            app:errorIconDrawable="@drawable/ic_error"
            app:helperTextTextAppearance="@style/TextAppearance.MaterialComponents.Subtitle1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/llPicture">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etWorkshopName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/WorkshopOpis"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="32dp"
            android:hint="@string/hint_Opis"
            app:errorIconDrawable="@drawable/ic_error"
            app:helperTextTextAppearance="@style/TextAppearance.MaterialComponents.Subtitle1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/WorkshopPhoneNum"
            app:layout_constraintStart_toStartOf="parent"
            tools:layout_editor_absoluteY="499dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etWorkshopOpis"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textMultiLine"
                android:textColorHint="#757575" />

        </com.google.android.material.textfield.TextInputLayout>

        <LinearLayout
            android:id="@+id/LLType"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="32dp"
            android:orientation="horizontal"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/WorkshopOpis">

            <TextView
                android:id="@+id/TipRadionice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tip_radionice"
                android:textSize="20sp" />

            <Spinner
                android:id="@+id/workshopTypeSpinner"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_marginStart="10dp"
                app:layout_constraintStart_toEndOf="@+id/TipRadionice"
                app:layout_constraintTop_toBottomOf="@+id/WorkshopName" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="32dp"
            android:orientation="horizontal"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/LLType">

            <TextView
                android:id="@+id/CenaRada"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cena_rada"
                android:textSize="20sp" />

            <RatingBar
                android:id="@+id/ratingBar"
                style="@style/moneyRatingBar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:layout_gravity="center"
                android:layout_marginStart="10dp"
                android:numStars="3"
                android:stepSize="1.0" />
        </LinearLayout>


        <LinearLayout
            android:id="@+id/llPicture"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/profilePic"
                android:layout_width="wrap_content"
                android:layout_height="200dp"
                android:layout_gravity="center"
                android:adjustViewBounds="true"
                android:padding="2dp"
                android:scaleType="fitCenter"
                android:src="@drawable/ic_broken_image" />

            <Button
                android:id="@+id/btnSelectPicture"
                style="@style/Widget.AppCompat.Button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="0"
                android:text="@string/btnAddPicture"
                app:layout_constraintTop_toBottomOf="@+id/LName" />

            <Button
                android:id="@+id/btnAddPicture"
                style="@style/Widget.AppCompat.Button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="0"
                android:text="@string/iskoristi_kameru"
                app:layout_constraintTop_toBottomOf="@+id/LName" />


        </LinearLayout>


        <Button
            android:id="@+id/buttonFinish"
            style="@style/Widget.MaterialComponents.Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="32dp"
            android:text="@string/dodaj_radionicu"
            app:layout_constraintTop_toBottomOf="@id/linearLayout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            tools:layout_editor_absoluteY="742dp" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>