<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.mosis_projekat.Main.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_friends"
        android:name="com.example.mosis_projekat.Main.ui.friends.FriendsFragment"
        android:label="@string/menu_friends"
        tools:layout="@layout/fragment_friends" >
        <action
            android:id="@+id/action_nav_friends_to_bluetoothUsersFragment"
            app:destination="@id/bluetoothUsersFragment" />
        <action
            android:id="@+id/action_nav_friends_to_viewFriendFragment"
            app:destination="@id/viewFriendFragment" />
    </fragment>

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.example.mosis_projekat.Main.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_slideshow" />
    <fragment
        android:id="@+id/bluetoothUsersFragment"
        android:name="com.example.mosis_projekat.Main.ui.friends.BluetoothUsersFragment"
        android:label="fragment_bluetooth_users_list"
        tools:layout="@layout/fragment_bluetooth_users_list" />
    <fragment
        android:id="@+id/nav_maps"
        android:name="com.example.mosis_projekat.Main.ui.maps.MapsFragment"
        android:label="fragment_maps"
        tools:layout="@layout/fragment_maps" >
        <action
            android:id="@+id/action_nav_maps_to_viewFriendFragment"
            app:destination="@id/viewFriendFragment" />
        <action
            android:id="@+id/action_nav_maps_to_addWorkshopFragment"
            app:destination="@id/addWorkshopFragment" />
    </fragment>
    <fragment
        android:id="@+id/viewFriendFragment"
        android:name="com.example.mosis_projekat.Main.ui.friends.ViewFriendFragment"
        android:label="fragment_view_friend"
        tools:layout="@layout/fragment_view_friend" >
        <argument
            android:name="uid"
            app:argType="string"
            android:defaultValue='""' />
    </fragment>
    <fragment
        android:id="@+id/addWorkshopFragment"
        android:name="com.example.mosis_projekat.Main.ui.maps.workshops.AddWorkshopFragment"
        android:label="AddWorkshopFragment" >
        <argument
            android:name="lat"
            app:argType="java.lang.Double" />
        <argument
            android:name="long"
            app:argType="java.lang.Double" />
    </fragment>
</navigation>